[package]
name = "file-download"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
hex-literal = "0.4.1"
sha2 = "0.10.8"
reqwest = { version = "0.12", features = ["stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
platform-dirs = "0.3.0"
log = "0.4"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"